# Spectracom

./: CMakeLists.txt  Findspectracom.cmake  README.md  package.xml
examples/: rsg_test.cpp  set_simulator_cno.cpp  sim_controller_example.cpp  test.cpp
include/spectracom/: ConnectionException.hpp  EthernetConnection.hpp  SpectracomGsg6.hpp  spectracomGsg6.hpp  spectracomGsg6Protocol.hpp
include/spectracom/exceptions/: ConnectionException.hpp  SpectracomErrorException.hpp
include/spectracom/msg/: Commands.hpp  Enum2String.hpp  Errors.hpp  Options.hpp  Queries.hpp
src/: EthernetConnection.cpp  PracticalSocket.cpp  SpectracomGsg6.cpp  spectracomGsg6.cpp
tests/: SpectracomUnitTests.cpp
